# dirtmud

./: .travis.yml  Cargo.toml  PLAN.md  README.md
assets/: greet.txt
assets/data/: users.json
src/: auth.rs  clients.rs  engine.rs  json_local.rs  logging.rs  main.rs
