[package]
name = "dirtmud"
version = "0.1.0"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "^0.5"
ctrlc = "^3.1"
chrono = "^0.4"
inotify = "^0.7"
log = "^0.4"
#rpassword = "^4.0"
json = "^0.11"
lazy_static = "^1.3"
simplelog = "^0.6"
zeroize = "^0.10"
